# kindle_reader

./: .env.sample  README.md  pyproject.toml  run.py
